--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AfetKurtar">
-        <activity android:name=".ScreenActivity"></activity>
+        <activity android:name=".Volunteer"></activity>
+        <activity android:name=".Emergency" />
+        <activity android:name=".Anasayfa" />
+        <activity android:name=".ScreenActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
