--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="com.example.afetkurtar">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA">
+
+    </uses-permission>
 
     <application
         android:allowBackup="true"
@@ -11,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AfetKurtar">
-        <activity android:name=".Volunteer"></activity>
+        <activity android:name=".CameraGalery"></activity>
+        <activity android:name=".Volunteer" />
         <activity android:name=".Emergency" />
         <activity android:name=".Anasayfa" />
         <activity android:name=".ScreenActivity" />
