--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AfetKurtar">
-        <activity android:name=".CameraGalery"></activity>
-        <activity android:name=".Volunteer" />
-        <activity android:name=".Emergency" />
-        <activity android:name=".Anasayfa" />
+        <activity android:name=".Volunteer_CameraGalery"></activity>
+        <activity android:name=".Volunteer_Participate" />
+        <activity android:name=".Volunteer_Emergency" />
+        <activity android:name=".Volunteer_Anasayfa" />
         <activity android:name=".ScreenActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
