On click map, add marker
When someone click on map, he/she can add marker on that position.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,9 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
+
+        resConfigs "en", "fr", "es", "zh", "de", "ja", "ru", "ko", "pt", "in"
+
         applicationId "com.example.afetkurtar"
         minSdkVersion 16
         targetSdkVersion 30
@@ -38,6 +41,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.2.1'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
