#15 Progress History Added and Create User quick fix..
Progress History function added to personel screen. Currently pull test variables from database.(because of Progress history table not created and filled yet)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,8 @@
     package="com.example.afetkurtar">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -21,10 +21,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AfetKurtar">
 
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
@@ -37,6 +37,7 @@
         <activity android:name=".Personel_Progress"/>
         <activity android:name=".MapActivity"/>
         <activity android:name=".Afet_Bolgesi"/>
+        <activity android:name=".Personel_Progress_History"/>
         <activity android:name=".Volunteer_Anasayfa" />
         <activity android:name=".Volunteer_ParticipateForm" />
         <activity android:name=".Authorized_Anasayfa" />
@@ -46,7 +47,6 @@
         <activity android:name=".Volunteer_Emergency" />
         <activity android:name=".ScreenActivity" />
         <activity android:name=".MainActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
