add the simple ftp int the camera emergency page #1

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.2.1'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation project(path: ':simpleftp')
 
 
     testImplementation 'junit:junit:4.+'
