#10 implemented Disaster Event Create screen.
Implemented Disaster Event Create Screen, additions made according to the requirements. Still the necessary arrangements are not completely over. However, a large scale design infrastructure was created.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
         <activity android:name=".Volunteer_ParticipateRequest" />
         <activity android:name=".Volunteer_Emergency" />
         <activity android:name=".ScreenActivity" />
+        <activity android:name=".Create_Disaster_Event_On_Map" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
