--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AfetKurtar">
-        <activity android:name=".Personel_Register"></activity>
+        <activity android:name=".Authorized_PersonelRegister"></activity>
 
         <meta-data
             android:name="com.google.android.gms.version"
