#10 added some new features, also added some variables
Added some features and Added Disaster Status and Emergency level variables to class that we use to create subparts.  Also xml files have been reworked.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,8 @@
         <activity android:name=".Volunteer_Emergency" />
         <activity android:name=".ScreenActivity" />
         <activity android:name=".Create_Disaster_Event_On_Map" />
+        <activity android:name=".Show_Subparts_Of_Disaster" />
+        <activity android:name=".Create_Main_Disaster_Event_Info" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
