--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'com.google.secrets_gradle_plugin' version '0.5'
 }
 
+apply plugin: 'com.google.gms.google-services'
+
 android {
 
         useLibrary 'org.apache.http.legacy'
@@ -39,15 +41,20 @@ dependencies {
 
     implementation 'com.android.volley:volley:1.2.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.work:work-runtime:2.0.1-rc01'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.firebase:firebase-storage:19.2.1'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    compile "org.apache.httpcomponents:httpmime:4.2.3"
-    compile 'org.apache.httpcomponents:httpcore:4.4.1'
+    implementation "org.apache.httpcomponents:httpmime:4.2.3"
+    implementation 'org.apache.httpcomponents:httpcore:4.4.1'
     implementation project(path: ':simpleftp')
 
+    implementation platform('com.google.firebase:firebase-bom:26.7.0')
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-messaging-directboot:20.2.0'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
