#14 A screen was designed to create the teams and organize the elements within the team.
A screen was designed in order to create teams with a desired number of personnel as an authorized user via the screen. At the same time, a design has been made so that the elements in the specified sets can be added and removed.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AfetKurtar">
-        <activity android:name=".Authorized_AssignTeam"></activity>
+        <activity android:name=".Authorized_Assign_Team"></activity>
+        <activity android:name=".Authorized_Edit_Team" />
+        <activity android:name=".Authorized_Create_Team" />
         <activity android:name=".Disaster_Subpart" />
         <activity android:name=".Disaster_Update" />
         <activity android:name=".DisasterCreate" />
