--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AfetKurtar">
-        <activity android:name=".Authorized_Assign_Team"></activity>
+        <activity android:name=".Authorized_Send_Notification"></activity>
+        <activity android:name=".Authorized_Assign_Team" />
         <activity android:name=".Authorized_Edit_Team" />
         <activity android:name=".Authorized_Create_Team" />
         <activity android:name=".Disaster_Subpart" />
