#11 NotificationSender Update, Personel Info Screen
update for Notification sender.
New scrren for personel users to see info of team.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AfetKurtar">
-        <activity android:name=".Authorized_Send_Notification"></activity>
+        <activity android:name=".Personel_Information"></activity>
+        <activity android:name=".Authorized_Send_Notification" />
         <activity android:name=".Authorized_Assign_Team" />
         <activity android:name=".MessageActivity" />
         <activity android:name=".Authorized_Edit_Team" />
@@ -48,7 +49,6 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
-
 
         <uses-library android:name="com.google.android.maps" />
 
