#14 Team Edit,Create, Assign Page Update, #11 @OkanErdgn sending notifications update, #13 Created Team_member_show_location. #12 Message Activity Updated.
#11 With @OkanErdgn sending notifications update. Automated to sending notification System.
#12 With @OkanErdgn Message Activity Updated. Messaging page completed.
#13 Created Team_member_show_location. Its content has been adjusted to show the positions of the team members in the database.
#14 With @OkanErdgn Team Edit,Create, Assign Page Update. Necessary functions for creating, deleting, editing, and adding and removing elements have been arranged. notification submissions have been added. Their designs have been developed.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,7 @@
 
         <activity android:name=".Volunteer_RegisterInfo" />
         <activity android:name=".Personel_Progress" />
+        <activity android:name=".Team_Member_Locations" />
         <activity android:name=".MapActivity" />
         <activity android:name=".Notification_Details" />
         <activity android:name=".Authorized_Notification" />
