--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AfetKurtar">
-        <activity android:name=".Personel_Information"></activity>
+        <activity android:name=".Authorized_VolunteerRequest2"></activity>
+        <activity android:name=".Authorized_VolunteerRequest" />
+        <activity android:name=".Personel_Information" />
         <activity android:name=".Authorized_Send_Notification" />
         <activity android:name=".Authorized_Assign_Team" />
         <activity android:name=".MessageActivity" />
