--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".Authorized_Personel_Update"></activity>
+        <activity android:name=".Authorized_Vol_Req_List"></activity>
+        <activity android:name=".Authorized_Personel_Update" />
         <activity android:name=".Authorized_Personeller" />
         <activity android:name=".Authorized_VolunteerRequest3" />
         <activity android:name=".Authorized_VolunteerRequest2" />
