Equipment Request List Screen For Authorized User
Now, each teams equipment requests can be seen on team details screen by authorized user. Authorized users can delete the fulfilled requests.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".Authorized_Vol_Req_List"></activity>
+        <activity android:name=".Authorized_Team_Equipment_Request_Details"></activity>
+        <activity android:name=".Authorized_Team_Equipment_Requests" />
+        <activity android:name=".Authorized_Vol_Req_List" />
         <activity android:name=".Authorized_Personel_Update" />
         <activity android:name=".Authorized_Personeller" />
         <activity android:name=".Authorized_VolunteerRequest3" />
