#9 Team optimization component finished.
Create a component that optimize the team assign and create from personnel users is finished. A structure was created to assign personnel to subpart in the most optimal way. The structure that allows post-calculation assignments to be made according to the determined subpart and determined manpower was produced. Also in pre-made pars, some bugs fixed.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity android:name=".Authorized_Team_Equipment_Requests" />
         <activity android:name=".Authorized_Vol_Req_List" />
         <activity android:name=".Authorized_Personel_Update" />
+        <activity android:name=".Authorized_SmartAssign_Subpart" />
         <activity android:name=".Authorized_Personeller" />
         <activity android:name=".Authorized_VolunteerRequest3" />
         <activity android:name=".Authorized_VolunteerRequest2" />
